# maxicp-rs

./: Cargo.toml  POSSIBLE_BUGS.md  README.md
.github/workflows/: rust.yml
resources/: artwork.md  artwork.txt  maxicp-rs.xcf
src/: lib.rs  prelude.rs
src/constraints/: absolute.rs  equal.rs  greater_or_equal.rs  is_equal.rs  is_less_or_equal.rs  is_not_equal.rs  less_or_equal.rs  mod.rs
src/constraints/plain/: and.rs  mod.rs  not_equal.rs  or.rs  sum.rs
src/constraints/plain/alldiff/: propagator.rs
src/constraints/regular/: absolute.rs  and.rs  equal.rs  greater_or_equal.rs  less_or_equal.rs  mod.rs  must_be_true.rs  not_equal.rs  or.rs  sum.rs
src/constraints/regular/alldiff/: alldiff.rs  max_matching.rs  mod.rs  modeling.rs  propagator.rs  varvalue_bipartite_graph.rs
src/constraints/reified/: is_and.rs  is_equal.rs  is_greater_or_equal.rs  is_less_or_equal.rs  is_maximum.rs  is_minimum.rs  is_not_equal.rs  is_or.rs  is_sum.rs  mod.rs
src/engine/: core.rs  domain.rs  mod.rs  model.rs  solver.rs
src/state/: manager.rs  mod.rs  trailed.rs
src/utils/: int.rs  mod.rs
